--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -7,17 +7,18 @@ on:
 permissions:
   id-token: write
   contents: read
+  security-events: write   # needed to upload SARIF to GitHub Code Scanning
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME: ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER: ${{ vars.BUILD_NUMBER || github.run_id }}
-  DOCKER_REPO:  ${{ vars.DOCKER_REPO  || 'notes-api-docker-repo' }}
-  JF_REGISTRY:  ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }} # host ONLY (no https)
-  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}       # none|low|medium|high|critical
+  BUILD_NAME:     ${{ vars.BUILD_NAME     || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER   || github.run_id }}
+  # Artifactory Docker repo / registry
+  DOCKER_REPO:    ${{ vars.DOCKER_REPO    || 'notes-api-docker-repo' }}
+  JF_REGISTRY:    ${{ vars.JF_REGISTRY    || 'aboavent.jfrog.io' }} # host only (no https)
+  # Scanning behavior
+  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}  # none|low|medium|high|critical
   XRAY_FORMAT: table
-  UPLOAD_PATTERN: ${{ vars.UPLOAD_PATTERN || '**/*' }}
-  UPLOAD_EXCLUSIONS: ${{ vars.UPLOAD_EXCLUSIONS || '**/.git/**;**/.github/**;**/.jfrog/**' }}
 
 jobs:
   build-scan-and-publish:
@@ -34,10 +35,8 @@ jobs:
           oidc-provider-name: github-oidc-integration
 
       - name: Ensure jq is available
-        shell: bash
         run: |
-          set -euo pipefail
-          if ! command -v jq >/dev/null 2nd; then
+          if ! command -v jq >/dev/null 2>&1; then
             sudo apt-get update -y && sudo apt-get install -y jq
           fi
 
@@ -53,17 +52,26 @@ jobs:
             echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
-      # ---------- Source SCA/SAST/Secrets/IaC audit (non-blocking) ----------
-      - name: Repo audit (non-blocking)
-        shell: bash
-        run: jf audit . --fail=false --format "${{ env.XRAY_FORMAT }}"
+      # ---------- Source scans: SAST / Secrets / IaC ----------
+      - name: Scan repository (non-blocking, table)
+        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
+
+      - name: Xray scan source (SARIF -> GitHub Security)
+        run: |
+          mkdir -p sarif
+          jf scan . --fail=false --format sarif > sarif/source.sarif
+
+      - name: Upload source scan SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: sarif/source.sarif
+          category: jfrog-source
 
       # ---------- Build Docker image ----------
       - name: Compose image tags
         id: tags
         shell: bash
         run: |
-          set -euo pipefail
           NAME="notes-api"
           SHA_TAG="${{ env.JF_REGISTRY }}/${{ env.DOCKER_REPO }}/${NAME}:${GITHUB_SHA}"
           SAFE_BRANCH=$(echo "${GITHUB_REF_NAME:-main}" | tr '/ ' '--')
@@ -72,58 +80,71 @@ jobs:
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
       - name: Build image (local)
-        shell: bash
         run: |
-          set -euo pipefail
           docker build -t "${{ steps.tags.outputs.sha_tag }}" -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Pre-push Xray scan of local image ----------
-      - name: Image scan (local with Docker)
-        shell: bash
+      # ---------- Image scan (local) -> SARIF ----------
+      - name: Xray scan Docker image (SARIF -> GitHub Security)
         run: |
-          set -euo pipefail
-          IMG="${{ steps.tags.outputs.sha_tag }}"
-          echo "Scanning local image with Xray: ${IMG}"
-          jf docker scan "${IMG}" --fail=false --format "${{ env.XRAY_FORMAT }}"
+          mkdir -p sarif
+          jf docker scan "${{ steps.tags.outputs.sha_tag }}" --format sarif > sarif/docker.sarif
 
-      # ---------- Login & push to Artifactory (new docker syntax) ----------
-      - name: Docker login to Artifactory
-        shell: bash
-        run: |
-          set -euo pipefail
-          jf docker login "${{ env.JF_REGISTRY }}"
+      - name: Upload Docker scan SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: sarif/docker.sarif
+          category: jfrog-docker
 
-      - name: Push images (record build-info)
+      # ---------- Push & record build-info ----------
+      - name: Push image & record build-info (both tags)
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         shell: bash
         run: |
-          set -euo pipefail
-          jf docker push "${{ steps.tags.outputs.sha_tag }}" --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
-          jf docker push "${{ steps.tags.outputs.ref_tag }}" --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
+          # Use jf rt docker-push so build-info is captured automatically
+          jf rt docker-push "${{ steps.tags.outputs.sha_tag }}" "${{ env.DOCKER_REPO }}" \
+            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
+          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
+            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
-      # ---------- Publish build-info ----------
       - name: Publish build-info
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
+        run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
       # ---------- Xray Build Scan (policy-gated) ----------
       - name: Scan published build (policy-gated)
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+          BUILD_NAME:       ${{ env.BUILD_NAME }}
+          BUILD_NUMBER:     ${{ env.BUILD_NUMBER }}
           FAIL_ON_SEVERITY: ${{ env.FAIL_ON_SEVERITY }}
         shell: bash
         run: |
-          set -euo pipefail
           if [ "${FAIL_ON_SEVERITY}" = "none" ]; then
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" || true
           else
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
           fi
+
+      # ---------- Summarize build-scan counts in job summary ----------
+      - name: Summarize Xray build scan in job summary
+        env:
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
+          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+        run: |
+          set -euo pipefail
+          jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --format simple-json | tee scan.json || true
+          CRIT=$(jq '[.vulnerabilities[]? | select(.severity=="Critical")] | length' scan.json)
+          HIGH=$(jq '[.vulnerabilities[]? | select(.severity=="High")] | length' scan.json)
+          MED=$(jq  '[.vulnerabilities[]? | select(.severity=="Medium")] | length' scan.json)
+          LOW=$(jq  '[.vulnerabilities[]? | select(.severity=="Low")]    | length' scan.json)
+          {
+            echo "### Xray Build Scan Results"
+            echo "- **Build**: \`${BUILD_NAME}/${BUILD_NUMBER}\`"
+            echo "- **Critical**: ${CRIT}"
+            echo "- **High**: ${HIGH}"
+            echo "- **Medium**: ${MED}"
+            echo "- **Low**: ${LOW}"
+          } >> "$GITHUB_STEP_SUMMARY"
