--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -7,15 +7,14 @@ on:
 permissions:
   id-token: write
   contents: read
-  security-events: write
 
 env:
-  PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME:     ${{ vars.BUILD_NAME     || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER   || github.run_id }}
-  DOCKER_REPO:    ${{ vars.DOCKER_REPO    || 'notes-api-docker-repo' }}
-  JF_REGISTRY:    ${{ vars.JF_REGISTRY    || 'aboavent.jfrog.io' }} # host only
-  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}          # none|low|medium|high|critical
+  PYTHON_VERSION:  ${{ vars.PYTHON_VERSION  || '3.11' }}
+  BUILD_NAME:      ${{ vars.BUILD_NAME      || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER:    ${{ vars.BUILD_NUMBER    || github.run_id }}
+  DOCKER_REPO:     ${{ vars.DOCKER_REPO     || 'notes-api-docker-repo' }}
+  JF_REGISTRY:     ${{ vars.JF_REGISTRY     || 'aboavent.jfrog.io' }} # host only
+  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}            # none|low|medium|high|critical
   XRAY_FORMAT: table
   JFROG_CLI_LOG_LEVEL: ERROR
 
@@ -29,7 +28,7 @@ jobs:
       - name: Setup JFrog CLI (OIDC)
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}
+          JF_URL: ${{ vars.JF_URL }}         # e.g. https://aboavent.jfrog.io
         with:
           oidc-provider-name: github-oidc-integration
 
@@ -51,32 +50,12 @@ jobs:
             echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
-      # ---------- Source scans: SAST / Secrets / IaC ----------
-      - name: Scan repository (non-blocking, table)
+      # ---------- Source scans: SAST / Secrets / IaC (non-blocking) ----------
+      - name: Audit repository (non-blocking)
+        run: jf audit . --fail=false --format "${{ env.XRAY_FORMAT }}"
+
+      - name: Scan repository (non-blocking)
         run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
-
-      - name: Xray scan source (SARIF -> GitHub Security)
-        shell: bash
-        run: |
-          set -euo pipefail
-          mkdir -p sarif
-          # Capture stdout to SARIF, stderr to a side file. Do not fail job if jf exits non-zero.
-          jf scan . --fail=false --format sarif > sarif/source.sarif 2> sarif/source.err || true
-          # If SARIF missing/invalid, create a minimal empty SARIF so upload won't fail.
-          if ! jq -e '.runs' sarif/source.sarif >/dev/null 2>&1; then
-            echo "SARIF invalid or empty; creating empty SARIF for source scan"
-            cat > sarif/source.sarif <<'JSON'
-            { "$schema":"https://json.schemastore.org/sarif-2.1.0.json","version":"2.1.0","runs":[{ "tool":{ "driver":{"name":"JFrog CLI"} }, "results":[] }]}
-            JSON
-          fi
-          # Show first lines of any stderr for troubleshooting in logs (non-fatal)
-          test -s sarif/source.err && { echo "----- jf scan (source) stderr -----"; sed -e '1,200p' sarif/source.err; echo "----- end stderr -----"; } || true
-
-      - name: Upload source scan SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: sarif/source.sarif
-          category: jfrog-source
 
       # ---------- Build Docker image ----------
       - name: Compose image tags
@@ -94,26 +73,19 @@ jobs:
         run: |
           docker build -t "${{ steps.tags.outputs.sha_tag }}" -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Image scan (local) -> SARIF ----------
-      - name: Xray scan Docker image (SARIF -> GitHub Security)
+      # ---------- Image scan (local daemon, non-blocking; with tar fallback) ----------
+      - name: Xray scan Docker image (non-blocking)
         shell: bash
         run: |
           set -euo pipefail
-          mkdir -p sarif
-          jf docker scan "${{ steps.tags.outputs.sha_tag }}" --format sarif > sarif/docker.sarif 2> sarif/docker.err || true
-          if ! jq -e '.runs' sarif/docker.sarif >/dev/null 2>&1; then
-            echo "SARIF invalid or empty; creating empty SARIF for docker scan"
-            cat > sarif/docker.sarif <<'JSON'
-            { "$schema":"https://json.schemastore.org/sarif-2.1.0.json","version":"2.1.0","runs":[{ "tool":{ "driver":{"name":"JFrog CLI"} }, "results":[] }]}
-            JSON
-          fi
-          test -s sarif/docker.err && { echo "----- jf docker scan stderr -----"; sed -e '1,200p' sarif/docker.err; echo "----- end stderr -----"; } || true
-
-      - name: Upload Docker scan SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: sarif/docker.sarif
-          category: jfrog-docker
+          echo "Verifying local image:"
+          docker image inspect "${{ steps.tags.outputs.sha_tag }}" >/dev/null
+          echo "Scanning with Xray (local daemon)…"
+          jf docker scan "${{ steps.tags.outputs.sha_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}" || {
+            echo "Direct scan failed; saving image to tar and scanning tar as fallback…"
+            docker save "${{ steps.tags.outputs.sha_tag }}" -o image.tar
+            jf scan image.tar --fail=false --format "${{ env.XRAY_FORMAT }}"
+          }
 
       # ---------- Push & record build-info ----------
       - name: Push image & record build-info (both tags)
