--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -31,9 +31,16 @@ jobs:
       - name: Setup JFrog CLI (OIDC)
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}                                # e.g. https://aboavent.jfrog.io
+          JF_URL: ${{ vars.JF_URL }}                                # e.g., https://aboavent.jfrog.io
         with:
           oidc-provider-name: github-oidc-integration
+
+      - name: Ensure jq is available
+        shell: bash
+        run: |
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update -y && sudo apt-get install -y jq
+          fi
 
       - name: "Sanity: show effective settings"
         shell: bash
@@ -59,7 +66,7 @@ jobs:
         run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
 
       # ---------- Build Docker image (tag = branch) ----------
-      - name: Compose image tag (branch)
+      - name: Compose image tag
         id: tags
         shell: bash
         run: |
@@ -70,45 +77,36 @@ jobs:
 
       - name: Build image
         shell: bash
-        run: |
-          docker build -t "${{ steps.tags.outputs.ref_tag }}" .
+        run: docker build -t "${{ steps.tags.outputs.ref_tag }}" .
 
       # ---------- Xray image scan (local daemon, non-blocking) ----------
       - name: Docker image scan (local, non-blocking)
         shell: bash
-        run: |
-          jf docker scan "${{ steps.tags.outputs.ref_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
+        run: jf docker scan "${{ steps.tags.outputs.ref_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
 
-      # ---------- Push & Build-Info (only on 'main') ----------
-      - name: Docker login (Artifactory via JF CLI)
-        if: github.ref_name == 'main'
-        shell: bash
-        run: jf docker login "${{ env.JF_REGISTRY }}"
-
-      - name: Push image & record build-info (main only)
-        if: github.ref_name == 'main'
+      # ---------- Push & record build-info (branch tag only) ----------
+      - name: Push image & record build-info
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         shell: bash
         run: |
-          jf docker push "${{ steps.tags.outputs.ref_tag }}" \
+          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
-      - name: Publish build-info (main only)
-        if: github.ref_name == 'main'
+      # ---------- Publish build-info ----------
+      - name: Publish build-info
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         shell: bash
         run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
-      # ---------- Xray Build Scan (policy-gated, main only) ----------
-      - name: Scan published build (policy-gated, main only)
-        if: github.ref_name == 'main'
+      # ---------- Xray Build Scan (policy-gated) ----------
+      - name: Scan published build (policy-gated)
         env:
-          BUILD_NAME: ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+          BUILD_NAME:       ${{ env.BUILD_NAME }}
+          BUILD_NUMBER:     ${{ env.BUILD_NUMBER }}
           FAIL_ON_SEVERITY: ${{ env.FAIL_ON_SEVERITY }}
         shell: bash
         run: |
@@ -117,3 +115,25 @@ jobs:
           else
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
           fi
+
+      # ---------- Job summary ----------
+      - name: Summarize Xray build scan in job summary
+        env:
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
+          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --format simple-json | tee scan.json || true
+          CRIT=$(jq '[.vulnerabilities[]? | select(.severity=="Critical")] | length' scan.json)
+          HIGH=$(jq '[.vulnerabilities[]? | select(.severity=="High")] | length' scan.json)
+          MED=$(jq  '[.vulnerabilities[]? | select(.severity=="Medium")] | length' scan.json)
+          LOW=$(jq  '[.vulnerabilities[]? | select(.severity=="Low")]    | length' scan.json)
+          {
+            echo "### Xray Build Scan Results"
+            echo "- **Build**: \`${BUILD_NAME}/${BUILD_NUMBER}\`"
+            echo "- **Critical**: ${CRIT}"
+            echo "- **High**: ${HIGH}"
+            echo "- **Medium**: ${MED}"
+            echo "- **Low**: ${LOW}"
+          } >> "$GITHUB_STEP_SUMMARY"
